movement test fleshed out #018