@@ -9,6 +9,8 @@ import oogasalad.GamePlayer.Board.ChessBoard;
 import oogasalad.GamePlayer.Board.Player;
 import oogasalad.GamePlayer.Board.TurnCriteria.Linear;
 import oogasalad.GamePlayer.Board.TurnCriteria.TurnCriteria;
+import oogasalad.GamePlayer.EngineExceptions.InvalidMoveException;
+import oogasalad.GamePlayer.EngineExceptions.OutsideOfBoardException;
 import oogasalad.GamePlayer.GamePiece.Piece;
 import oogasalad.GamePlayer.GamePiece.PieceData;
 import org.junit.jupiter.api.BeforeEach;
@@ -18,6 +20,9 @@ class MovementTest {
   private Movement movementOne;
   private Movement movementTwo;
   private Movement movementThree;
+
+  private Movement captureOne;
+  private Movement captureTwo;
 
   private ChessBoard board;
   private TurnCriteria turnCriteria;
@@ -30,30 +35,37 @@ class MovementTest {
   private Piece pieceOne;
   private Piece pieceTwo;
   private Piece pieceThree;
+  private Piece pieceFour;
   private List<Piece> pieces;
 
   @BeforeEach
   void setUp() {
-    playerOne = new Player(0, new int[]{1});
-    playerTwo = new Player(1, new int[]{0});
+    playerOne = new Player(0, new int[]{1, 2});
+    playerTwo = new Player(1, new int[]{2});
     playerThree = new Player(2, new int[]{});
     players = new Player[]{playerOne, playerTwo, playerThree};
+
+    turnCriteria = new Linear(players);
+
+    board = new ChessBoard(3, 3, turnCriteria, players, List.of());
 
     movementOne = new Movement(new Coordinate(1, 1), false);
     movementTwo = new Movement(new Coordinate(0, 1), true);
     movementThree = new Movement(new Coordinate(0, -1), false);
 
+    captureOne = new Movement(new Coordinate(1, 0), false);
+    captureTwo = new Movement(new Coordinate(1, 1), true);
+
     pieceOne = new Piece(new PieceData(new Coordinate(0, 0), "test1", 0, 0, false,
-        List.of(movementOne), Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), ""), board);
+        List.of(movementOne), List.of(captureOne, captureTwo), Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), ""), board);
     pieceTwo = new Piece(new PieceData(new Coordinate(1, 0), "test2", 0, 1, false,
         List.of(movementTwo), Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), ""), board);
     pieceThree = new Piece(new PieceData(new Coordinate(2, 1), "test3", 0, 2, false,
         List.of(movementOne, movementThree), Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), ""), board);
-    pieces = List.of(pieceOne, pieceTwo, pieceThree);
+    pieceFour = new Piece(new PieceData(new Coordinate(2, 2), "test4", 0, 2, false,
+        Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), ""), board);
+    pieces = List.of(pieceOne, pieceTwo, pieceThree, pieceFour);
 
-    turnCriteria = new Linear(players);
-
-    board = new ChessBoard(3, 3, turnCriteria, players, List.of());
     board.setPieces(pieces);
   }
 
@@ -62,8 +74,10 @@ class MovementTest {
     try {
       assertEquals(movementOne.getMoves(pieceOne, board),
           Set.of(board.getTile(new Coordinate(1, 1))));
+//      assertEquals(movementOne.movePiece(pieceOne, new Coordinate(1, 1), board), Set.of(board.getTile(new Coordinate(0, 0)), board.getTile(new Coordinate(1, 1))));
       assertEquals(movementThree.getMoves(pieceThree, board),
           Set.of(board.getTile(new Coordinate(2, 0))));
+//      assertEquals(movementOne.movePiece(pieceThree, new Coordinate(2, 0), board), Set.of(board.getTile(new Coordinate(2, 0)), board.getTile(new Coordinate(2, 1))));
     } catch(Exception e) {
       e.printStackTrace();
       fail();
@@ -75,8 +89,52 @@ class MovementTest {
     try {
       assertEquals(movementTwo.getMoves(pieceTwo, board),
           Set.of(board.getTile(new Coordinate(1, 1)), board.getTile(new Coordinate(1, 2))));
+//      assertEquals(movementOne.movePiece(pieceTwo, new Coordinate(1, 2), board), Set.of(board.getTile(new Coordinate(1, 0)), board.getTile(new Coordinate(1, 2))));
     } catch(Exception e) {
       fail();
     }
+  }
+
+  @Test
+  void finiteCaptureTestHappy() {
+    try {
+      assertEquals(captureOne.getCaptures(pieceOne, board), Set.of(board.getTile(new Coordinate(1, 0))));
+      assertEquals(captureOne.getCaptures(pieceTwo, board), Set.of());
+    } catch(Exception e) {
+      e.printStackTrace();
+      fail();
+    }
+  }
+
+  @Test
+  void infiniteCaptureTestHappy() {
+    try {
+      assertEquals(captureTwo.getCaptures(pieceTwo, board), Set.of(board.getTile(new Coordinate(2, 1))));
+      assertEquals(captureTwo.getCaptures(pieceOne, board), Set.of(board.getTile(new Coordinate(2, 2))));
+      assertEquals(captureTwo.getCaptures(pieceThree, board), Set.of());
+    } catch(Exception e) {
+      e.printStackTrace();
+      fail();
+    }
+  }
+
+  @Test
+  void finiteMoveCaptureSad() {
+    assertThrows(OutsideOfBoardException.class, () -> movementOne.movePiece(pieceOne, new Coordinate(50, 50),board));
+    assertThrows(OutsideOfBoardException.class, () -> captureOne.capturePiece(pieceOne, new Coordinate(50, 50),board));
+
+    assertThrows(
+        InvalidMoveException.class, () -> movementOne.movePiece(pieceOne, new Coordinate(2, 0),board));
+    assertThrows(InvalidMoveException.class, () -> captureOne.capturePiece(pieceOne, new Coordinate(2, 0),board));
+  }
+
+  @Test
+  void infiniteMoveCaptureSad() {
+    assertThrows(OutsideOfBoardException.class, () -> movementTwo.movePiece(pieceOne, new Coordinate(50, 50),board));
+    assertThrows(OutsideOfBoardException.class, () -> captureTwo.capturePiece(pieceOne, new Coordinate(50, 50),board));
+
+    assertThrows(
+        InvalidMoveException.class, () -> movementTwo.movePiece(pieceOne, new Coordinate(2, 0),board));
+    assertThrows(InvalidMoveException.class, () -> captureTwo.capturePiece(pieceOne, new Coordinate(2, 0),board));
   }
 }
